--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+body {
+    background-image: url('');
+    background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center center; /* Centra la imagen en el fondo */
+    height: 100vh; /* Asegura que el fondo cubra toda la altura de la ventana */
+    margin: 0;
+}
